finally got webpack.config.client.js to work

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Golf Improvement</title>
-  <link rel="stylesheet" href="./src/index.css">
+  <link rel="stylesheet" href="../src/index.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="./src/index.js"></script>
+  <script src="../src/index.js"></script>
 </body>
 </html>
